kubernetes/2_service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: test
  name: svc-test
  namespace: test
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: test
